fix: fix selected skill button text color in dark mode

--- a/src/components/HGNSkillsDashboard/SkillsProfilePage/styles/Skills.module.css
+++ b/src/components/HGNSkillsDashboard/SkillsProfilePage/styles/Skills.module.css
@@ -91,6 +91,6 @@
   background-color: #444;
 }
 
-:global(.dark-mode) .skills button.selected {
-  color: #8ab4f8;
+.darkMode button.selected {
+  color: #8ab4f8 !important;
 }
